# annas-dl-py

./: .gitignore  Dockerfile  browse.py  flake.nix  pyproject.toml
k8s/: ipfs.yaml
src/annas_dl/: __init__.py  annas_client.py  cli.py  config.py  db.py  downloader.py  main.py  s3.py  search.py  torrent.py  urn.py
